DDF-642: Added fixes to code comments.